# ChangeLog for dev-python/wxpython
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython/ChangeLog,v 1.208 2014/10/06 01:09:03 leio Exp $

*wxpython-3.0.1.1 (06 Oct 2014)

  06 Oct 2014; Mart Raudsepp <leio@gentoo.org> +wxpython-3.0.1.1.ebuild:
  Version bump

  19 May 2014; Michał Górny <mgorny@gentoo.org> -wxpython-2.8.12.1-r1.ebuild:
  Drop the old versions that required python-exec:0.

  19 Mar 2014; Agostino Sarubbo <ago@gentoo.org> wxpython-2.8.12.1-r2.ebuild:
  Stable for alpha, wrt bug #499472

  18 Mar 2014; Agostino Sarubbo <ago@gentoo.org> wxpython-2.8.12.1-r2.ebuild:
  Stable for ia64, wrt bug #499472

  12 Mar 2014; Markus Meier <maekke@gentoo.org> wxpython-2.8.12.1-r2.ebuild:
  arm stable, bug #499472

  12 Mar 2014; Agostino Sarubbo <ago@gentoo.org> wxpython-2.8.12.1-r2.ebuild:
  Stable for sparc, wrt bug #499472

  06 Mar 2014; Agostino Sarubbo <ago@gentoo.org> wxpython-2.8.12.1-r2.ebuild:
  Stable for ppc64, wrt bug #499472

  02 Mar 2014; Pacho Ramos <pacho@gentoo.org> wxpython-2.8.12.1-r2.ebuild:
  amd64 stable, bug #499472

  24 Feb 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  wxpython-2.8.12.1-r2.ebuild:
  x86 stable wrt bug #499472

  02 Feb 2014; Agostino Sarubbo <ago@gentoo.org> wxpython-2.8.12.1-r2.ebuild:
  Stable for ppc, wrt bug #499472

  28 Jan 2014; Jeroen Roovers <jer@gentoo.org> wxpython-2.8.12.1-r2.ebuild:
  Stable for HPPA (bug #499472).

  27 Jan 2014; Ryan Hill <dirtyepic@gentoo.org> -wxpython-2.8.12.1.ebuild,
  -wxpython-2.9.3.1.ebuild, -wxpython-2.9.4.1-r1.ebuild:
  Remove old.

  18 Jan 2014; Ryan Hill <dirtyepic@gentoo.org> wxpython-3.0.0.0.ebuild:
  Add libnotify USE flag to force a rebuild if the corresponding wxGTK flag
  changes (bug #498068).

*wxpython-3.0.0.0 (30 Dec 2013)

  30 Dec 2013; Ryan Hill <dirtyepic@gentoo.org> +wxpython-3.0.0.0.ebuild,
  +files/wxpython-3.0.0.0-wxversion-scripts.patch,
  +files/wxpython-3.0-wxversion-demo.patch: