@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX wxpython-2.8-cache-writable.patch 538 SHA256 caf371fdd36ae60b36754f6fa66df3887c3ee2e1dd509f8cc8bc92525942f429 SHA512 e0232ff7bcb713358a2981b84b0eac3b3b0825d43b43dd6f19d3d21f9b45a9e63fbf39dc87c2fedc0342a88007ef43fcd9d890177dc38e15b4f89576fdf363a0 WHIRLPOOL c2c0488d0d5a840d1be68c95a2f53d3bce7d58798f0e09f2116f16655d73c8a5b525af7d7b836c7f820bd729acff441942510055b8f455a9b2f742361effd6c3
 AUX wxpython-2.8-no-preservatives-added.patch 525 SHA256 590ef2435f3bb24ce061213628467652509aa39992d9b0f94e1c784952d523b8 SHA512 83e066d6798aea833304004d7270e3b7698e51581e9ac9c934b96fb438bbafb16cea15cc73297961893fd73fd18f95cade22c134aea6556962025fc3c12bdedd WHIRLPOOL 218e72aa785c762f0171987c79cb7d998864252ebd259537e463f134caabca17d8f5d5d75f2ec7791cf5353edb8331d173eb6f08d4fbb7f7713d9ca14ad91831
 AUX wxpython-2.8-wxversion-demo.patch 219 SHA256 19618386cf750f56051541c403153bf1c7e90764199e53818eb0c9557d026f1c SHA512 a20e79dc2f96400046dd5d5697533466529c30bde96a2e8ace1984c7e3fb42a6b38375cacddeb319253dbaabff6571b52af41da5268d22cfb294b11da56421f8 WHIRLPOOL 3af6ad578fcc1144f0172b4a959665441880ba20b9d471049f9c48602987e4265df34b180cd98727d0beadef66e6603fbdad7f1d0b0358a795b3372a8f46d2df
@@ -15,6 +18,7 @@ DIST wxPython-demo-2.8.12.1.tar.bz2 3906851 SHA256 252282193a80590b9eab436bef322
 DIST wxPython-demo-2.9.4.0.tar.bz2 3992754 SHA256 c1a57ef7c71ea1a332df98b80cfa7ba178ef6dcd24a31393dff905a145ba8b7b SHA512 dac61d9bb09deffd54c89c1a09803968a4c4b2951a00ebb4d618a2a1b48775c62e3ddf2c642e9005d7362fdeab44c07bc2a38bc96dc94a5c891982847d0c19fe WHIRLPOOL 2093d3d0f81c15b7ca1a346fae29429952d299f8e33d5c2e356846bd98df890b731fe4ef0311ec32b7a913a4038aa8881396d9878dde98322136ccb5244a867b
 DIST wxPython-demo-3.0.0.0.tar.bz2 3991989 SHA256 426aaf20c7b01f5e9fbd7bd41455441bb126585f5544a848a5fa060e07f7b443 SHA512 4fe8a87faacac99c54c4fcbdb707c9790b49f485186e1741cc1ba05e955e474ca4ea31ff704a57e73b32b4fad310ef490066743d1c6ad4339191cde2daec255d WHIRLPOOL c6a2b12111572164474083f66dd0e2eff12e4faea5ce880767bfba3de493e8d56e6747c659ff1a3d533d0f6bcde1d5c9daabb9bccb2148278cdce074f5ddcbae
 DIST wxPython-demo-3.0.1.1.tar.bz2 3991248 SHA256 bb264db3369c7228f0356f1ad64f6a9ca3000b167bc1ce3fee94d3d2fa20d069 SHA512 b75ca80b5a247f5c97691c4c77c36d64ebe82d94803cd8d687b2110e9de290067c7da893797ae13d0a9f42a4da83170b630dcdeb9460657355c43005dfeac89a WHIRLPOOL 3db15c676252f4f96b585271d0ef005b84cbb4538f01db53e18c587b33fdfc5b57da40d9ba2f2c467063de79c81ed6440982fe5e21547a21fbe2d7d4e252f69c
+DIST wxPython-demo-3.0.2.0.tar.bz2 3992212 SHA256 8bf195138744898b4b6fbe11f52f7ee2f6319c2e3adf832917769b2e2d4994f3 SHA512 361ecaa7dfe5bae0757e04215c564370eaf8e5260ead45007f9d70439c15701725c3cbcd76691a5191258bef24fd200ebd61347a3fd920d888137bfc98a16702 WHIRLPOOL a944790a4c7b38dc8d8d28c7def50f765cd5566118d801cb576a0ab9d8370a803f8feedbf3211d0352dd838c92d9d4f092eaf6d78354a1974f2345304dd7b2e1
 DIST wxPython-docs-2.8.12.1.tar.bz2 2331363 SHA256 1dfae3a74b91e2003856eed51698c51094f1a4e6688633ae61af7a22fa8a0ddb SHA512 88591ef4f61bcbac29050d7dfecc230f7338cc006e7c3abc072b15da478e4fd994ab73ee5d072cb8b84f9de62ce182f1774354b0a7a4502ea639e59fdf965358 WHIRLPOOL 97bc66c8f781b5092e2274edc0b9bac35c21c91a66e4c0da75d543dc471f25d02334b28a5afe4ad0681b7a018a93f08b6ef5d3c6afd127ccfc24da208252cd89
 DIST wxPython-newdocs-2.8.9.2.tar.bz2 1503913 SHA256 890b6b7ca37ba7aaa27f9716ea9992ac75ed8150e83939506e3c47f86e7f37a8 SHA512 e114b2b44a7fd3ac292ca9735fb2e075459211384bc98d62ff2ba49e45111825101e74abd4af2ab0e5e52ede7b831641367c11a5c80e79f2da6ada3442463bfc WHIRLPOOL 91ccbe19e8311f0404fb0096efff68750fa0c3b505d05c9278e0488e138788dc399ff2345e13c712126475957a1c1fcc53556d70cd9c835524207be5758a6e2b
 DIST wxPython-src-2.8.12.1.tar.bz2 31311482 SHA256 1f3f153d9f1504c6ce2d2c4b23e940b8f58b81f4cba35cda1a5bb31142243cd0 SHA512 4f826ccb57d5f4fc03fe7cae67499be70c727a99aebf9d153ea1060a21641642606d44d079ba897c38b176846336aeaebc21d30d5c7a0abec3934d65cf4529f3 WHIRLPOOL 94f91d359f755a0f805588303e8507b2f1404a7f4af73777f85366265df9f76ca89ac29bff491cffd752b707645952a4f7f2bb12fa7e30f3e7d3728147a9c99d
@@ -22,9 +26,18 @@ DIST wxPython-src-2.9.4.0.tar.bz2 50827671 SHA256 78c35c19e85a17cb9c730b86b49d6a
 DIST wxPython-src-2.9.4.1.patch 3768 SHA256 075e3a7b1cf69dd2bb20010717505d2508c74bc81658540f3e6d8c4fbf0a6b85 SHA512 4a5254a5bb9c246b75095e3cc0b849073e3cc71ff15ab7fb1db6ecfe71359800b9e1a5493bc39ce5b1f338cdc1d142ce84641611d458a8da4315f3c8a6aef3ba WHIRLPOOL 9bec06da4824fe56c172f4f417966681d1ffbf173dcb54f1579e9a484377bc76c45b4f2389911bbb17eff2476cfca786d68d9524856b21accc64b4dffafb1811
 DIST wxPython-src-3.0.0.0.tar.bz2 57831792 SHA256 af88695e820dd914e8375dc91ecb736f6fb605979bb38460ace61bbea494dc11 SHA512 9328f46817e0c1670a6be5d10347c8a7110c42a5332c5c35eb11ed0412d8dddeb15727d98606bb6c699af961cee171c41b82b1f24f3de25463259106660f7387 WHIRLPOOL 7865997e22db366a41bae8a5d5c47e4f46b20d17871377243abced3a6550c46588ea1d5a426d826ccf011c62898f87d6a55a14ac9b4153af4e0795d5f180a647
 DIST wxPython-src-3.0.1.1.tar.bz2 58139645 SHA256 d51463fe760e2fc00271678700c216809f9db32a6081a1808bd4b7c884dc0a32 SHA512 71f75c1e36c9ac27c15d768f69662b18ff1c66ad111ef6ef8579dfdb5296d7c37ffce9f60000afeac289cd6288980037d3a7eb3ea8d6d25e619d8692cf41b914 WHIRLPOOL bb03b78048b368b1c2f5a8b8689aecf412953ff789b2a8d2ef4826112fdc6bff8ed881255d05859ac07f915dd1070f6147d6bfdd97b0ab4b0939c024df3b855a
+DIST wxPython-src-3.0.2.0.tar.bz2 58304944 SHA256 d54129e5fbea4fb8091c87b2980760b72c22a386cb3b9dd2eebc928ef5e8df61 SHA512 a3798e89ff19344253aac7d771971e519f7fa9723e82bd97e98f16fd7f1572e513170b02295b872dae0b1ae3fa95efc4ef34d078045b839694b4fdad3a27c9e4 WHIRLPOOL 89cdef12c9ef96044adba0340d47b699e685eaec581a4e7d68f3b95a0890715e29b1f5362027df0f3f8b5b1587e8fe404a7fa88049ece9677dd8316fbdf2e41d
 EBUILD wxpython-2.8.12.1-r2.ebuild 5708 SHA256 93c2cea4038a5d8fcfe6d1d2db586825fe69f6098571d35279c3d4a8cf7da4b9 SHA512 0be889af0b9a55a94e55643c5c6c397ceb58368cf8dfb4ff067ba71464aa55ef987cc3888268e6c2e2dc87af66b2d3ce343891a8e9effe344556343d4161686b WHIRLPOOL 81094252e0df00ac88fe35db495e29ac19e9f29899219bfef23946de8cde73c70e4ccf206cc0fb376b7070c91f09ef6fae84d2590dac3025a40b0fcafdfab8f5
 EBUILD wxpython-2.9.4.1-r2.ebuild 4882 SHA256 c9e93b5996caa02e9d5219b1f3358a5e1b9089646fecc335bddf2d1730838a26 SHA512 db43ab67839a5f1cbaf11ae0086a5a8246edf66bdff35fe6260dd4de959dba4801c4a8f5daf9bc040d3071442d54a461c4d0e0c665d12ea6015b65aaef29d390 WHIRLPOOL d5b8b74ef5edab244cfb7199184560bd1e586456464bd73105637d2e00e462f819e6cc32bc399a69c0ac327085494842deede429e0e487b583ba3f01608f4dd8
 EBUILD wxpython-3.0.0.0.ebuild 4737 SHA256 9365f0144ea62631b64174a30484b889b16451ba783361acba921dbc4fc0211d SHA512 cecaac75c8914378322459a50f410ddc15050b0c5f36f510e1f4331fc264d4c296575082f548d30ff504c6633113b3ce8064ba5215050c91d0b0ab7355ffc08e WHIRLPOOL 1eecfaf66373f7d267c1979e7aeccc2b44968c523f872bea9bb74c8e18eb353f40509c2f17f057ee819eecf10ed5729a8d28e3ac3e724b1c43677c72b5ab0e4f
 EBUILD wxpython-3.0.1.1.ebuild 4741 SHA256 b4f8ebcbe229b33f0ece7d4154f4e3cd55304334c493cf7cbe7448edce2c6f43 SHA512 cdaea755c5d2c213b49c0a8b0e3cce3563e6c57abeb26a8ea73259c0819829360108f8500cbbbbf666bf9c6c1f0acd782d5238ed1161c614ef0ba5d8b0c36586 WHIRLPOOL 03f8b5f406f8033c0b3d0d2314bdaa662834cec5ba1659b6c8fe80de6d297e9f3fbe416308e389a85208654065ae0f439ad5436178ddfd3f34ba4e3ffa2aea28
-MISC ChangeLog 36032 SHA256 08c1208c4f0a44ff7bc6b3bbacada2117c365dadc0d7f5033416075348b58622 SHA512 3ad6e44608aace4f95dcc296bbbe8b3ad574ed1a5259b24ac3f31ec119bbf7f3689bbeb41b776007ab901252ed92cce4d5af6755b0982163f1dd05696488fac9 WHIRLPOOL c6251aebcb2c10b281143af0dffacfeb08882ad2146846a1489c674c4d261fbf73e5a3ed176fe136170e5a9f5120f3ebfb24d15598e518e4d1cc22e03ba38180
+EBUILD wxpython-3.0.2.0.ebuild 4744 SHA256 be5f525d42c2a97e296242acbf9b6bc5debc71f1f1f5553b1a3b4d25f08d4e4b SHA512 6a73e711964ac463ec0a6b2007218214477d40f4b868ad013946a853688c6fedde53146de50b767093e4eca702149876fea1bf05a50916afdb5a13aa3ccdd71e WHIRLPOOL b4f368d50313ebaeae7f8cefc207548ab019fc00b2566f85798f3b2b552b93ebc99fc27cff2a4dc8e914180a45e6e62b33cfacd44ce1a100caa2983adca68c22
+MISC ChangeLog 36172 SHA256 d3aef9377a489c6db2082209718ce590773ea2bf60275855981f449a825fe778 SHA512 fd6266ad7bf9de9fc18b145480f897f1f082f5dce5f06c8138a2b5affcae11cedad6ade373cee03daeafbe2341df68d866b85548fdcf08ea24d01872e02b45d7 WHIRLPOOL 00d988dc0bc5a16a221b85984bd53cdddd2b6c306148298e1839c8744f1c741fcff6572f816287fbc14e5cb9d910fd1a9ffa3a1e554d53116c4cd39bd7493522
 MISC metadata.xml 380 SHA256 4f8e2237b4a7281039211900504d5e8d7004e87c120631f18dd078a01178dfa8 SHA512 8b742161313fb1b1b0db6d07f1665988b061dbf2dd44c1e49e2fab8d1aa1dfbb218207c5696bcd027199a1ae2fbcb4673106c09d5169a44863deb021840288a8 WHIRLPOOL dbce4f031c171464b3cda63ec2f9c7f2841e108d441a45bfe1d7ec2d6b35874d9b04ab364836bb3d7be7ff12ef60e029fce7a841e156994f04820254bad91e6c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iF4EAREIAAYFAlSkNIQACgkQC77qH+pIQ6R87QD+O1bkuqkF9wy7ZiasGSzLnefi
+Vhfl5W1+RVMWaOV8ygkBAJ/CvrGk/HQdGtespaxpEEWT6yAsW+Culje9UvO/VQUz
+=b8AI
+-----END PGP SIGNATURE-----
