@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/wxpython
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython/ChangeLog,v 1.208 2014/10/06 01:09:03 leio Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/wxpython/ChangeLog,v 1.209 2014/12/31 17:38:10 floppym Exp $
+
+*wxpython-3.0.2.0 (31 Dec 2014)
+
+  31 Dec 2014; Mike Gilbert <floppym@gentoo.org> +wxpython-3.0.2.0.ebuild:
+  Version bump, bug 532016.
 
 *wxpython-3.0.1.1 (06 Oct 2014)
 
